--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,12 @@
   margin-bottom: 10px;
 }
 
-
 nav {
   /*color:#5c6bc0 indigo lighten-1;*/
-  background-color: #fff;
-  width: 100%;
+  background-color: #ffffff;
+  width: 100.1%;
   height: 75px;
   line-height: 56px;
-
 }
 
 .nav-wrapper * {
@@ -51,6 +49,8 @@ nav ul a {
   display: block;
   padding: 0 15px;
   cursor: pointer;
+  height: 75px;
+  line-height: 3.6;
 }
 
 /*rgba(230,39,57,0.3)*/
@@ -77,7 +77,7 @@ nav ul a:hover {
   padding-bottom: 0;
   padding-top: 0;
   margin-bottom: 35px;
-  top:8px;
+  top: 8px;
 }
 
 .side-nav .collapsible-header.active {
@@ -89,7 +89,8 @@ nav ul a:hover {
   background-color: #ffffff;
   border-bottom: 2px solid #ff8a80;
 }
-.card{
+
+.card {
   margin-bottom: 2rem;
 }
 
@@ -100,8 +101,6 @@ nav ul a:hover {
 /*}*/
 
 /*.side-nav .collapsible-body li.active a {*/
-
-
 
 /*}*/
 
@@ -120,16 +119,17 @@ nav ul a:hover {
   text-transform: uppercase;
 }
 
-.caption{
-  background-color:rgba(255, 138, 128, 0.7);
+.caption {
+  background-color: rgba(255, 138, 128, 0.7);
   text-align: center;
 }
+
 /*.myworks {*/
-  /*background-color: #f7f7f7;*/
-  /*width: 100%;*/
-  /*height: 420px;*/
-  /*margin-bottom: 10px;*/
-  /*padding: 10px 0;*/
+/*background-color: #f7f7f7;*/
+/*width: 100%;*/
+/*height: 420px;*/
+/*margin-bottom: 10px;*/
+/*padding: 10px 0;*/
 /*}*/
 
 .works {
@@ -138,7 +138,7 @@ nav ul a:hover {
   padding: 10px 0 10px 0;
   text-align: center;
   /*border: solid;*/
-  color: #fff;
+  color: #ffffff;
   transition: color .25s;
   line-height: 1.5;
   height: 65px;
@@ -222,7 +222,7 @@ nav ul a:hover {
 .scrollbar .handle {
   width: 100px;
   height: 100%;
-  background:#ff8a80;
+  background: #ff8a80;
   cursor: pointer;
 }
 
@@ -302,42 +302,42 @@ nav ul a:hover {
   width: 400px;
   margin: 0 30px 0 2px;
 }
-.card-panel img{
+
+.card-panel img {
   /*padding: 15px 0;*/
   margin-right: 3px;
   width: 45%;
   border-radius: 50%;
   float: left;
-  top:5px;
+  top: 5px;
   position: relative;
- 
 }
+
 .card-panel {
   padding: 20px 20px 5px 20px;
   font-size: 16px;
   font-style: italic;
   font-family: sans-serif;
-  color:#3d3d44;
+  color: #3d3d44;
 }
 
-.card-panel p{
+.card-panel p {
   text-align: right;
   margin-top: 0;
   margin-bottom: 0;
 }
 
-
 .btn, .btn-large {
   text-decoration: none;
-  color:#ff8a80 ;
-  border:3px solid #ff8a80;
+  color: #ff8a80;
+  border: 3px solid #ff8a80;
   background-color: #fafafa;
   text-align: center;
   letter-spacing: .5px;
   transition: .2s ease-out;
   cursor: pointer;
-  line-height: 2;
-  font-weight: 600;
+  /*line-height: 2;*/
+  font-weight: 500;
   font-size: 18px;
   font-style: normal;
   padding: 10px;
@@ -346,7 +346,7 @@ nav ul a:hover {
   display: table;
 }
 
-.card-panel a{
+.card-panel a {
   text-align: center;
   /*display: block;*/
 }
@@ -380,32 +380,32 @@ textarea.materialize-textarea {
   transition: all 0.3s;
 }
 
-
 /*.card-panel .hi {*/
-  /*display: block;*/
-  /*font-size: 25px;*/
-  /*font-style: italic;*/
-  /*color:#3949ab;*/
-  /*margin-top: 5px;*/
-  /*margin-bottom:10px;*/
-  /*text-shadow: 1px 1px 2px #cccccc;*/
+/*display: block;*/
+/*font-size: 25px;*/
+/*font-style: italic;*/
+/*color:#3949ab;*/
+/*margin-top: 5px;*/
+/*margin-bottom:10px;*/
+/*text-shadow: 1px 1px 2px #cccccc;*/
 /*}*/
 
-.basket{
-  height:350px;
+.basket {
+  height: 350px;
   /*text-align: center;*/
-  margin: 30px 0;
+  /*margin: 30px 0;*/
 }
 
- .box1  {
-   background-image: url("../img/fit-a-curtain-pole-3.jpg");
-    background-size: cover;
-   width: 100%;
-   height: 350px;
-   text-align: center;
-   /*background-color: #e0e0e0;*/
- }
-.box2  {
+.box1 {
+  background-image: url("../img/fit-a-curtain-pole-3.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 350px;
+  text-align: center;
+  /*background-color: #e0e0e0;*/
+}
+
+.box2 {
   background-image: url("../img/itemslider4.jpg");
   background-size: cover;
   width: 100%;
@@ -413,7 +413,8 @@ textarea.materialize-textarea {
   text-align: center;
   /*background-color: #e0e0e0;*/
 }
-.box3  {
+
+.box3 {
   background-image: url("../img/curtains2.png");
   background-size: cover;
   width: 100%;
@@ -421,7 +422,8 @@ textarea.materialize-textarea {
   text-align: center;
   /*background-color: #e0e0e0;*/
 }
-.box4  {
+
+.box4 {
   background-image: url("../img/roll.jpg");
   background-size: cover;
   width: 100%;
@@ -430,98 +432,359 @@ textarea.materialize-textarea {
   /*background-color: #e0e0e0;*/
 }
 
- .box{
-   /*background-color:rgba(255, 138, 128, 0.3);*/
-   background-color: rgba(255,255,255,0.75);
-   width: 100%;
-   height: 350px;
- }
+.box {
+  /*background-color:rgba(255, 138, 128, 0.3);*/
+  background-color: rgba(255, 255, 255, 0.75);
+  width: 100%;
+  height: 350px;
+}
 
 .whitesq {
   width: 100%;
   height: 100%;
   padding: 0px 25px;
-  
 }
-.flaticon{
-  text-align: center;
-  }
 
-.flaticon i{
- 
+.flaticon {
+  text-align: center;
+}
+
+.flaticon i {
   font-size: 45px;
-  color: #fff;
+  color: #ffffff;
   font-style: normal;
   margin: 15px auto;
-  
 }
 
-
-
-.btn:hover, .btn-large:hover{
-   opacity: 1;
-  color: #fff;
+.btn:hover, .btn-large:hover {
+  opacity: 1;
+  color: #ffffff;
   /*border: 3px solid #3949ab ;*/
-  background-color:#ff8a80;
- 
+  background-color: #ff8a80;
 }
 
-.basket li{
+.basket li {
   color: #ff8a80;
   font-size: 20px;
-  font-weight:bold ;
-  background-color:  rgba(255,255,255,0.9);
+  font-weight: bold;
+  background-color: rgba(255, 255, 255, 0.9);
   margin: 10px 15px 15px 15px;
   padding: 10px;
 }
 
-
 .videobody {
-  background: url('../img/WL.mp4');
-  background-size:cover;
- 
-  margin: 0;
+  background: url('../video/natalimade.mp4');
+  background-size: cover;
   padding: 0;
-  opacity:0.8;
+  margin: 0;
+  /*opacity:0.8;*/
   position: relative;
- 
-} 
+}
 
 .bgvideo {
-  /*position: fixed;*/
-  /*right: 0;*/
-  /*bottom: 0;*/
-  width: 100%;
-  /*min-height: 100%;*/
-  /*width: 100%;*/
-  /*height: auto;*/
+  position: relative;
   z-index: -9999;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: 100%;
+  height: auto;
+  margin: -50px 0;
+  overflow: hidden;
+}
+
+.input-field label {
+  color: #3d3d44;
+  position: absolute;
+  top: 0.1rem;
+  font-size: 1rem;
+  cursor: text;
+  transition: .2s ease-out;
+}
+
+.input-field .prefix.active {
+  color: #3949ab;
+}
+
+input:not([type]):focus:not([readonly]), input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly]), input[type=email]:focus:not([readonly]), input[type=url]:focus:not([readonly]), input[type=time]:focus:not([readonly]), input[type=date]:focus:not([readonly]), input[type=datetime]:focus:not([readonly]), input[type=datetime-local]:focus:not([readonly]), input[type=tel]:focus:not([readonly]), input[type=number]:focus:not([readonly]), input[type=search]:focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]) {
+  border-bottom: 1px solid #3949ab;
+  box-shadow: 0 1px 0 0 #3949ab;
+}
+
+input:not([type]):focus:not([readonly]) + label,
+input[type=text]:focus:not([readonly]) + label,
+input[type=password]:focus:not([readonly]) + label,
+input[type=email]:focus:not([readonly]) + label,
+input[type=url]:focus:not([readonly]) + label,
+input[type=time]:focus:not([readonly]) + label,
+input[type=date]:focus:not([readonly]) + label,
+input[type=datetime]:focus:not([readonly]) + label,
+input[type=datetime-local]:focus:not([readonly]) + label,
+input[type=tel]:focus:not([readonly]) + label,
+input[type=number]:focus:not([readonly]) + label,
+input[type=search]:focus:not([readonly]) + label,
+textarea.materialize-textarea:focus:not([readonly]) + label {
+  color: #3949ab;
 }
 
 .contacts {
   position: absolute;
-  font-size: 2.5em;
-  color:#fff ;
+  font-size: 2.4em;
+  color: #ffffff;
   /*z-index: 10000;*/
   /*text-align: center;*/
-  top:5%;
-  width: 35%;
+  top: 5%;
+  width: 30%;
   right: 2%;
- 
+}
+
+.contact-card-panel {
+  padding: 20px;
+  /*font-size: 1.4em;*/
+  font-style: italic;
+  font-family: sans-serif;
+  color: #3d3d44;
+  /*color:#ff8a80;*/
+  position: absolute;
+  right: 2%;
+  top: 20%;
+  background-color: rgba(250, 250, 250, 0.9);
+  width: 35%;
+}
+
+.contact_detail {
+  margin: 15px auto;
+}
+
+.contact_detail span {
+  margin-left: 10px;
+  margin-top: -5px;
+  font-size: 24px;
+  /*margin-bottom: 20px;*/
+  padding-bottom: 15px;
+  display: inline-block;
+  width: calc(100% - 3rem);
+  border-bottom: 1px solid #9e9e9e;
+}
+
+.contact_detail * {
+  vertical-align: top;
+}
+
+.contact_detail_1 .prefix {
+  width: 3rem;
+}
+
+  
+  
+.about_me > div {
+  /*border: 1px solid red;*/
+}
+
+.about_me {
+  height: 850px;
+  margin-top: 30px;
+  /*border: 1px solid blue;*/
+  text-align: center;
+   position: relative;
+  
 }
 
 
-.contact-card-panel{
-  padding: 20px ;
-  font-size: 16px;
-  font-style: italic;
-  font-family: sans-serif;
-  color:#3d3d44;
+.main_round{
+  /*width: 60%;*/
+  width: 650px;
+  height: 650px;
+  /*height: 80%;*/
+  background: #fff;
+  border: 1px dashed #3949ab;
+   display: block;
+  border-radius: 325px;
   position: absolute;
-  right: 2%;
-  top:20%;
+  z-index: -2;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.round{
+  width: 425px;
+  /*width: 36%;*/
+  height: 425px;
+  /*height: 50%;*/
+  background: #ff8a80;
   
-  width: 35%;
+  opacity: 0.5;
+  /*border: 2px dashed #000;*/
+  display: block;
+  border-radius: 250px;
+  /*border-radius: 53%;*/
+  position: absolute;
+  z-index: -2;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  top:50px;
+}
+
+.about_me .cell {
+  margin-bottom: 20px;
+  text-align: center;
+  width: 85%;
+  transition: box-shadow .25s;
+}
+.about_me .cell:hover{
+  background-color: rgba(255, 255, 255, 1);
+}
+
+.about_me .cell2 {
+  /*height: 150px;*/
+  /*border: 1px solid green;*/
+  margin-bottom: 0px;
+  /*background-color: rgba(255, 255, 255, 0.75);*/
+}
+
+.about_me_right .cell{
+  float: right;
+}
+
+.about_me_left, .about_me_right {
+  margin-top:20px;
+  height: 680px;
+  width:120px;
   
+}
+
+.about_me_middle {
+  height: 900px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+
+.cell i{
+  font-size:1.7em;
   
+}
+
+.about_me_middle .cell {
+  /*height: 340px;*/
+  margin:0 auto 20px;
+}
+
+.cell img{
+  width: 100%;
+  margin-top: 10px;
+}
+
+.me_box {
+  /*display: block;*/
+  margin: 0;
+  min-height: 4rem;
+  line-height: 3.7rem;
+  padding: 0 ;
+  background-color: #3949ab;
+  border-bottom: 1px solid #ddd;
+  color: #fff;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.me_box_detail{
+  background-color:#fafafa;
+  padding:10px;
+  margin: 0;
+  height:220px;
+  overflow: hidden;
+  display: table-cell;
+
+  vertical-align: middle;
+}
+
+
+.me_box_detail li{
+  text-align: left;
+  padding:5px 5px 10px 15px;
+  text-indent: -14px;
+  margin: 0 5px 0 20px;
+}
+
+.cell:hover{
+box-shadow: 0 6px 15px 0 rgba(0, 0, 0, 0.25), 0 6px 30px 0 rgba(0, 0, 0, 0.16);
+}
+
+.me_box_detail li i{
+  color: #ff8a80;
+  font-size:1.2em;
+   margin-right: 10px;
+}
+
+.btn1 {
+  text-decoration: none;
+  color: #3949ab;
+  border: 3px solid #3949ab;
+  background-color: rgba(255,255,255,0.5);
+  text-align: center;
+  letter-spacing: .5px;
+  transition: .2s ease-out;
+  cursor: pointer;
+  line-height: 2;
+  font-weight: 700;
+  font-size: 20px;
+  font-style: normal;
+  padding: 10px;
+  border-radius: 5%;
+  margin: 10px auto;
+  display: table;
+  z-index: 5;
+  position: absolute;
+}
+
+.waves-effects {
+  position: absolute;
+  cursor: pointer;
+  display: inline-block;
+  overflow: hidden;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  vertical-align: middle;
+  z-index: 5;
+  will-change: opacity, transform;
+  transition: all .3s ease-out;
+  top:400px;
+  left: 500px;
+}
+
+
+.btn1:hover {
+  opacity: 1;
+  color: #ffffff;
+  /*border: 3px solid #3949ab ;*/
+  background-color: #3949ab;
+}
+
+
+
+.collapsible-header {
+  display: block;
+  cursor: pointer;
+  min-height: 3rem;
+  line-height: 3.6rem;
+  padding: 0 1rem;
+  background-color: #fff;
+  border-bottom: 1px solid #ddd;
+  color: #3949ab;
+  text-align: center;
+  font-size: 20px;
+}
+
+.collapsible-header:hover, .collapsible-header.active  { 
+  background-color: #ff8a80;
 }
